welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:13: error: value avance is not a member of Unit
	poseBiscuit()avance()
                     ^